--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Name</title>
     <link rel="stylesheet" href="./src/css/index.css">
+    <script src="src/Js/index.js"></script>
 </head>
 <body>
     <header>
@@ -20,7 +21,11 @@
 	</header>
       
     <main>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non unde perspiciatis optio debitis exercitationem quo laudantium praesentium, temporibus quas vitae, hic labore officia, sint expedita velit repellat ex repudiandae sed.</p>
+        <div id="main">
+            <ul id="main-list" class="main-list">
+                <li id="img-products"><img src="" alt="Carregando"></img></li>
+            </ul>
+        </div>
     </main>
 </body>
 </html>
