--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Name</title>
     <link rel="stylesheet" href="./src/css/index.css">
-    <script src="src/Js/index.js"></script>
+    <script src="src/Js/index.js"></scr
 </head>
 <body>
     <header>
